# Walter

./: .env  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  general notes.txt  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
data/: historical_data.txt
docs/: architecture.md  branding.md  notes.md
src/: hyperliquid_API.py  market_data.py
src/walter/: LLM_API.py  __init__.py  config.py  dashboard.py  db_utils.py  hyperliquid_API.py  market_data.py  news_API_aggregator.py  news_aggregator.py  news_summarizer.py  news_summerizer.py  utils.py  web_dashboard.py
